# termpaper

./: Cargo.toml  upload
.cargo/: config
rm2fb/: librm2fb_server.so.1.0.1  librm2fb_xofb.so.1.0.1
src/: main.rs
