[package]
name = "hello-rm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
vte = { git = "https://github.com/alacritty/vte" }
fontdue = "*"
libremarkable = { git = "https://github.com/canselcik/libremarkable" }
rand = "*"
noise = "*"
# rocket = "0.4"

